--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>maven-jflex-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<name>Maven JFlex Plugin</name>
-	<version>1.4.3</version>
+	<version>1.4.3-r1</version>
 	<description>
 		This is a Maven 2 plugin to generate a parser in Java code from
 		a Lexer definition, using Jflex.de.
