--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>jflex-parent</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
+    <version>1.6.0</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
   <artifactId>jflex-testsuite-testcases</artifactId>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.6.0-SNAPSHOT</version>
+      <version>1.6.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
