--- a/jflex/examples/pom.xml
+++ b/jflex/examples/pom.xml
@@ -13,7 +13,7 @@
 			<plugin>
 				<groupId>de.jflex</groupId>
 				<artifactId>jflex-maven-plugin</artifactId>
-				<version>1.6.0</version>
+				<version>1.7.0-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<goals>
