--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
 	<name>JFlex Maven Plugin</name>
 	<version>1.6.0</version>
 	<description>
-      This is a Maven 2 plugin to generate a parser in Java code from
+      This is a Maven 2/3 plugin to generate a parser in Java code from
       a Lexer definition, using JFlex.
   
       This plugin was previously called maven-jflex-plugin.
@@ -49,7 +49,7 @@
 	<developers>
 		<developer>
 			<id>decamps</id>
-			<name>RÃ©gis DÃ©camps</name>
+			<name>Régis Décamps</name>
 			<email>decamps@users.sf.net</email>
 			<roles>
 				<role>developer</role>
