added missing version on the testsuite maven plugin
svn-rev: trunk@848

--- a/testsuite/testcases/pom.xml
+++ b/testsuite/testcases/pom.xml
@@ -35,6 +35,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-testsuite-maven-plugin</artifactId>
+        <version>${project.version}</version>
         <executions>
           <execution>
             <goals>
