Oracle JDK is back to the Unix path for tools.jar on OS X
At least it seems so on my machine..

--- a/testsuite/jflex-testsuite-maven-plugin/pom.xml
+++ b/testsuite/jflex-testsuite-maven-plugin/pom.xml
@@ -93,7 +93,7 @@
         </os>
       </activation>
       <properties>
-        <toolsjar>${java.home}/../Classes/classes.jar</toolsjar>
+        <toolsjar>${java.home}/../lib/tools.jar</toolsjar>
       </properties>
     </profile>
   </profiles>
