--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>jflex-parent</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.6.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>JFlex</name>
@@ -112,7 +112,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-              <skeleton>src/main/jflex/skeleton.nested</skeleton>
+              <skeleton>src/main/jflex/skeleton.nested-1.6.0</skeleton>
             </configuration>
           </execution>
         </executions>
