--- a/pom.xml
+++ b/pom.xml
@@ -138,8 +138,18 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>2.5</version>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+            <configuration>
+                <filesets>
+                    <fileset>
+                        <directory>lib</directory>
+                        <includes>
+                            <include>**/${project.artifactId}-${project.version}.jar</include>
+                        </includes>
+                    </fileset>
+                </filesets>
+            </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
