--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -135,6 +135,18 @@
               </target>
             </configuration>
           </execution>
+          <execution>
+            <id>copy-jar-to-lib</id>
+            <phase>install</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <target name="copy">
+                <copy file="${project.build.directory}/${project.artifactId}-${project.version}.jar" todir="lib" />
+              </target>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -157,6 +169,21 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <filesets>
+            <fileset>
+              <directory>lib</directory>
+              <includes>
+                <include>**/${project.artifactId}-${project.version}.jar</include>
+              </includes>
+            </fileset>
+          </filesets>
+        </configuration>
+      </plugin>      
     </plugins>
     <pluginManagement>
       <plugins>
