--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -166,6 +166,14 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.16</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.6</version>
+          <configuration>
+            <keyname>84A70085</keyname>
+          </configuration>
+        </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
