--- a/jflex/build.xml
+++ b/jflex/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <project name="JFlex" default="help">
 
-  <property name="version" value="1.6.1-SNAPSHOT" />
+  <property name="version" value="1.6.1" />
   <property name="bootstrap.version" value="1.6.0" />
   <property name="junit.version" value="4.11" />
   <property name="cup.version" value="11a" />
