--- a/jflex-maven-plugin/pom.xml
+++ b/jflex-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>jflex-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <name>JFlex Maven Plugin</name>
-  <version>1.6.1-SNAPSHOT</version>
+  <version>1.7.0-SNAPSHOT</version>
   <description>
       This is a Maven 2/3 plugin to generate Lexer code in Java from
       a Lexer specification, using JFlex.
@@ -21,7 +21,7 @@
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
     <version>7</version>
-    <relativePath></relativePath>
+    <relativePath/>
   </parent>
   <mailingLists>
     <mailingList>
@@ -195,7 +195,7 @@
                     </goals>
                   </pluginExecutionFilter>
                   <action>
-                    <ignore></ignore>
+                    <ignore/>
                   </action>
                 </pluginExecution>
               </pluginExecutions>
@@ -220,7 +220,7 @@
     <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>jflex</artifactId>
-      <version>1.6.1-SNAPSHOT</version>
+      <version>1.7.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
