--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
   <artifactId>jflex-parent</artifactId>
   <name>JFlex parent and aggregator POM</name>
   <version>1.7.0-SNAPSHOT</version>
+
   <packaging>pom</packaging>
   <url>http://jflex.de</url>
   <description>JFlex parent and agregator POM</description>
@@ -58,6 +59,7 @@
     <module>jflex-unicode-maven-plugin</module>
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
+    <module>jflex-pmd-plugin</module>
     <module>testsuite</module>
   </modules>
 
