--- a/tex/Makefile
+++ b/tex/Makefile
@@ -1,12 +1,10 @@
 # Makefile for jflex documentation (ps + pdf + html)
 
-all: pdf html
+all: pdf
 
 build: realclean all
 
 pdf: manual.pdf
-
-html: manual.html
 
 # while the conversion to markdown is in progress:
 xmanual.md: manual.tex manual.bib jay.tex installing.tex
@@ -22,15 +20,7 @@ manual.pdf: logo.png manual.tex manual.bib jay.tex installing.tex
 	pdflatex manual
 	pdflatex manual
 
-manual.html: manual.tex manual.bib installing.tex jay.tex
-	make clean
-	pdflatex manual
-	bibtex manual
-	pdflatex manual
-	pdflatex manual
-	latex2html -split 0 -no_navigation -html_version 3.2,math -t "JFlex User's Manual" -local_icons -address "`date`, <a href=\"http://www.doclsf.de\">Gerwin Klein</a>" -info "" manual 
-	cp manual/manual.html .
-	rm -rf manual 
+#	latex2html -split 0 -no_navigation -html_version 3.2,math -t "JFlex User's Manual" -local_icons -address "`date`, <a href=\"http://www.doclsf.de\">Gerwin Klein</a>" -info "" manual 
 
 %.tex: %.md
 	pandoc -f markdown -t latex --biblatex $< -o $@
