--- a/logging.properties
+++ b/logging.properties
@@ -1,9 +1,10 @@
-handlers = java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level     = FINER
+handlers=java.util.logging.ConsoleHandler
+de.jflex.level=ALL
+java.util.logging.ConsoleHandler.level=FINER
 # %1 date
 # %2 source
 # %3 logger
 # %4 level
 # %5 message
 # %6 thrown
-java.util.logging.SimpleFormatter.format   =%1$tH:%1$tM:%1$tS %4$s %2$s - %5$s%6$s%n
+java.util.logging.SimpleFormatter.format=%1$tH:%1$tM:%1$tS %4$s %2$s - %5$s%6$s%n
