complete the split into multiple .md files; add html cites
still needs manual pass through the markdown files to fix up
the automatic conversion

(issue #187)

--- a/tex/.gitignore
+++ b/tex/.gitignore
@@ -2,6 +2,11 @@ installing.tex
 intro.tex
 head.tex
 example.tex
+encodings.tex
+end.tex
+lex-specs.tex
+performance.tex
+porting-and-parsers.tex
 
 *.bbl
 *.blg
