switch build system back to manual.pdf and manual.html
(issue #187)

--- a/tex/.gitignore
+++ b/tex/.gitignore
@@ -16,8 +16,10 @@ porting-and-parsers.tex
 *.bcf
 *.out
 
+*.mdx
+
+manual.md
+manual.pdf
 xmanual.tex
 xmanual.html
-ymanual.pdf
-hmanual.html
-hmanual.md
+xmanual.pdf
