--- a/tex/Makefile
+++ b/tex/Makefile
@@ -43,6 +43,6 @@ clean:
 
 realclean: clean 
 	rm -f *.mdx
-	rm -f manual.html manual.pdf manual.md
+	rm -f manual.html manual.pdf manual.md xmanual.pdf
 	rm -f intro.tex installing.tex example.tex lex-specs.tex
 	rm -f encodings.tex performance.tex porting-and-parsers.tex end.tex
