--- a/jflex/examples/simple-maven/pom.xml
+++ b/jflex/examples/simple-maven/pom.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>de.flex.examples</groupId>
-    <artifactId>parent</artifactId>
-    <version>1</version>
-  </parent>
+  <groupId>de.flex.examples</groupId>
   <artifactId>simple-maven</artifactId>
-  <version>0.1</version>
+  <version>1.0</version>
   <name>A scanner for a toy programming language.</name>
   <description>It is the example from the JLex website with some small
 		modifications, to make it a bit more readable.
@@ -19,7 +15,24 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>de.jflex</groupId>
+        <artifactId>jflex-maven-plugin</artifactId>
+        <version>1.7.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
