--- a/jflex/examples/standalone-maven/pom.xml
+++ b/jflex/examples/standalone-maven/pom.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>de.flex.examples</groupId>
-    <artifactId>parent</artifactId>
-    <version>1</version>
-  </parent>
+  <groupId>de.flex.examples</groupId>
   <artifactId>standalone-maven</artifactId>
-  <version>0.1</version>
-  <description>This is a small example of a standalone text substitution scanner.
+  <version>1.0</version>
+  <description><![CDATA[This is a small example of a standalone text substitution scanner.
 
-It reads a name after the keyword name and replaces all occurences
-of "hello" by "hello &lt;name&gt; !".&lt;/name&gt;</description>
+It reads a name after the keyword name and replaces all occurrences
+of "hello" by "hello <name> !".]]></description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>3.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>de.jflex</groupId>
+        <artifactId>jflex-maven-plugin</artifactId>
+        <version>1.7.0-SNAPSHOT</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
