notes for web version of manual

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -1,5 +1,6 @@
 # Makefile for jflex documentation (ps + pdf + html)
 
+#VERSION=1.6.1
 VERSION=1.7.0-SNAPSHOT
 RELEASE_DATE=16 March 2015
 UNICODE_VER=7.0
@@ -17,6 +18,7 @@ md/manual.md: md/head.md md/intro.md md/installing.md md/example.md md/lex-specs
 
 manual.html: manual.mdx
 	pandoc -S --css manual.css --filter pandoc-citeproc -f markdown $< -o $@
+#	pandoc -S --filter pandoc-citeproc -f markdown --toc --toc-depth=2 $< -o $@
 
 #dependency manual.tex would fire manual.md -> .tex conversion
 xmanual.pdf: xmanual.tex intro.tex installing.tex example.tex lex-specs.tex \
