no standalone file for web version

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -18,7 +18,7 @@ md/manual.md: md/head.md md/intro.md md/installing.md md/example.md md/lex-specs
 
 manual.html: manual.mdx
 	pandoc -S --css manual.css --filter pandoc-citeproc -f markdown $< -o $@
-#	pandoc -S --filter pandoc-citeproc -f markdown --toc --toc-depth=2 $< -o $@
+#	pandoc --filter pandoc-citeproc -f markdown --toc --toc-depth=2 $< -o $@
 
 #dependency manual.tex would fire manual.md -> .tex conversion
 xmanual.pdf: xmanual.tex intro.tex installing.tex example.tex lex-specs.tex \
