--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,7 +12,7 @@ build: realclean all
 pdf: manual.pdf
 html: manual.html
 
-md/manual.md: md/head.md md/intro.md md/installing.md md/example.md md/lex-specs.md \
+md/manual.md: md/head.md md/intro.md md/installing.md md/ant-task.md md/example.md md/lex-specs.md \
               md/encodings.md md/performance.md md/porting-and-parsers.md md/end.md
 	cat $^ > $@
 
@@ -22,7 +22,8 @@ manual.html: manual.mdx
 
 #dependency manual.tex would fire manual.md -> .tex conversion
 xmanual.pdf: xmanual.tex intro.tex installing.tex example.tex lex-specs.tex \
-             encodings.tex performance.tex porting-and-parsers.tex end.tex
+             encodings.tex performance.tex porting-and-parsers.tex end.tex \
+             ant-task.tex
 	pdflatex xmanual
 	bibtex xmanual
 	pdflatex xmanual
