Update required maven version to 3.2.2
Ubuntu trusty comes with a version of Maven that doesn't allow to compile jflex-maven-plugin
https://issues.apache.org/jira/browse/MNG-5346

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
   </mailingLists>
 
   <prerequisites>
-    <maven>3.0.1</maven>
+    <!-- 3.0.x fails to compile flex-maven-plugin https://issues.apache.org/jira/browse/MNG-5346 -->
+    <maven>3.2.2.</maven>
   </prerequisites>
 
   <properties>
